# TestCpp-GHA-Coverage

./: .clang-tidy  .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  conanfile.txt
.github/workflows/: build.yml  clang-format-check.yml  cppcheck.yml  windows_build.yml
src/: Person.cpp  Person.hpp
test/: Person_GTest.cpp
